# the-map

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  EXPORT.md  LICENSE-CODE  LICENSE-CONTENT  METHODOLOGY.md  Makefile  README.md  SECURITY.md  TODOS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  new-ehr-request.md  vendor-correction.md
.github/workflows/: refresh-capstmts.yml  source-citation-linkcheck.yml  validate.yml
data/cms-npd/: coverage-2026-05-07.json  coverage-2026-05-07.md  coverage-2026-05-12.md
data/cms-pos/: hospitals-2025-06-01.json  hospitals-2026-01-01.json
data/hospital-overlays/: cerner-npd.json  cerner-nppes.json  epic-npd.json  epic-nppes.json  meditech-npd.json  meditech-nppes.json
data/hospital-overrides/: cerner-pos-nppes-augmented.json  cerner-pos.json  cerner-pos.llm.detail.json  cerner-pos.llm.json  epic-pos-nppes-augmented.json  epic-pos.json  epic-pos.llm.detail.json  epic-pos.llm.json  meditech-pos-nppes-augmented.json  meditech-pos.json  meditech-pos.llm.detail.json  meditech-pos.llm.json
ehrs/cerner/: overlay.json  p0_patient_selection.json  production_fleet.json  sandbox_patients.json
ehrs/epic/: CapabilityStatement.json  overlay.json  p0_patient_selection.json  production_fleet.json  sandbox_patients.json
ehrs/meditech/: overlay.json  production_fleet.json
ehrs/meditech-greenfield/: CapabilityStatement.json
ehrs/meditech/greenfield/: greenfield-meditech-com-snapshot-2026-05-02.html  postman-collection-stu6-v2.0.json
reports/: meditech-reachability-2026-05-02.md  pre-launch-validation-cerner-2026-05-02.md  pre-launch-validation-epic-2026-05-02.md  pre-launch-validation-meditech-2026-05-02.md
reports/2026-q2/: cerner-conformance-matrix.json  epic-conformance-matrix.json  epic-summary.md  epic-vs-cerner-comparison.json
reports/2026-q2/meditech-phase-b-sweep/: launch-patient-sweep.json  sweep-totals.json  write-probe.json
schema/: hospital_resolution.schema.json  overlay.schema.json  production_fleet.schema.json
tasks/: hospital-disambiguation.md
tests/: conftest.py  test_cross_artifact_invariants.py  test_env_loading.py  test_fetch_cms_nppes.py  test_fetch_lib.py  test_hospital_resolution_invariants.py  test_llm_disambiguate.py  test_measure_phase_b_evaluate_one.py  test_overlay_invariants.py  test_pos_index_build.py  test_production_fleet_invariants.py  test_render_paths.py  test_resolve_pos.py  test_validate_iron_rule.py
tests/fixtures/: verified_via_url_patterns.json
tests/golden/cerner/: CapabilityStatement-2026-04-26.json  CapabilityStatement-2026-05-11.json
tests/golden/cerner/phase-b-2026-04-27/: allergyintolerance-12724066.json  allergyintolerance-12742399.json  condition-problems-12742399.json  condition-problems-12744580.json  encounter-12724066.json  (+25 more)
tests/golden/cross-vendor/: epic-dstu2-endpoints-2026-04-27.json  epic-r4-endpoints-2026-04-27.json  epic-r4-endpoints-luxera-augmented-2026-05-07.diff.json  epic-r4-endpoints-luxera-augmented-2026-05-07.json  epic-r4-endpoints-npd-augmented-2026-05-12.diff.json  epic-r4-endpoints-npd-augmented-2026-05-12.json  meditech-brands-luxera-augmented-2026-05-07.diff.json  meditech-brands-luxera-augmented-2026-05-07.json  oracle-health-patient-r4-endpoints-luxera-augmented-2026-05-07.diff.json  oracle-health-patient-r4-endpoints-luxera-augmented-2026-05-07.json  oracle-health-patient-r4-endpoints-npd-augmented-2026-05-12.diff.json  oracle-health-patient-r4-endpoints-npd-augmented-2026-05-12.json  oracle-health-provider-r4-endpoints-luxera-augmented-2026-05-07.diff.json  oracle-health-provider-r4-endpoints-luxera-augmented-2026-05-07.json  oracle-health-provider-r4-endpoints-npd-augmented-2026-05-12.diff.json  oracle-health-provider-r4-endpoints-npd-augmented-2026-05-12.json
tests/golden/epic/: CapabilityStatement-2026-05-11.json  scope-response-2026-04-26T210211Z.txt
tests/golden/meditech/: CapabilityStatement-2026-04-27.json  CapabilityStatement-STU7-atchhosp-2026-04-27.json  CapabilityStatement-argonaut-atchhosp-2026-04-27.json  CapabilityStatement-atchhosp-2026-04-27.json  CapabilityStatement-greenfield-STU6-2026-04-27.json  brands-2026-04-27.json  error-unauth-post-bundle-2026-04-27.json  smart-configuration-atchhosp-2026-04-27.json  smart-configuration-greenfield-STU6-2026-04-27.json
tools/: _env.py  _fetch.py  analyze_fleet_drift.py  augment_pos_via_nppes.py  backfill_row_ids.py  begin_consent.py  build_baseline_from_ig.py  build_npd_endpoint_index.py  build_nppes_index.py  build_pecos_index.py  build_pos_hospital_index.py  capture_meditech_goldens.py  check_source_urls.py  cross_validate_with_hapi.py  diagnose_meditech_reachability.py  enumerate_sandbox_patients.py  fetch_brands.py  fetch_capability.py  fetch_cms_npd.py  fetch_cms_nppes.py  fetch_cms_pecos.py  fetch_cms_pos.py  fetch_us_core_ig.py  harvest_production_capstmts.py  llm_disambiguate.py  luxera_endpoint_discovery.py  measure_phase_b.py  npd_endpoint_discovery.py  nucc_to_pos.py  oauth_handshake.py  paste_callback.py  prelaunch_fleet_audit.py  probe_search_bulk_refs.py  probe_transport.py  recover_llm_overrides.py  render_html.py  report_npd_coverage.py  resolve_endpoints_to_npd.py  resolve_endpoints_to_nppes.py  resolve_endpoints_to_pos.py  (+6 more)
tools/auth_flows/: __init__.py  auth_code.py  client_credentials.py
tools/conformance/: __init__.py  cardinality.py  format.py  presence.py  value_set.py
tools/hapi/: docker-compose.example.yml
us-core/: us-core-6.1-baseline.json
us-core/ig-package/package/: .index.json  package.json
uscdi/: uscdi-v3-baseline.json
(+11210 files in other folders)
